test/parse-checks/type-at-filescope-2.good
line 6: error: type 't' can only be declared at file scope
