test/parse-checks/type-at-filescope-2.pebl
func foo(): void {

}

func bar(): void {
  type t = int;
}
